Navbar toggler now displaying correctly. Main nav disappears as it should on smaller screens to be replaced with the collapsed toggler

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -434,3 +434,9 @@ p.page-handpicked-text {
         margin-top: 300px;
     }
 }
+
+@media screen and (max-width: 768px) {
+div.heading-text {
+    padding-top: 200px;
+}
+}
